// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  background-color: white;
  border-radius: 3px;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 0px 1px rgba(0,0,0,0.1);
}

.c1 {
  padding: 1.5rem;
}

.c0 {
  position: relative;
}

<div
  aria-describedby="Callout-1"
  aria-labelledby="Callout-2"
  class="c0 c1 c2 c3"
>
  <div
    class="c4 c3"
  >
    <div
      class="c3"
    >
      <div
        class="c3"
        id="Callout-1"
      >
        Callout
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly when a close button is present 1`] = `
.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c11 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: #fcfcfc;
  color: inherit;
}

.c11:focus:not(:focus-visible) {
  outline: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c14 {
  fill: inherit;
  position: relative;
  font-size: 1em;
  height: 1em;
  width: 1em;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfc;
  border-radius: 4px;
  color: #435a6f;
  fill: #435a6f;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  border: 1px solid #b3b3b3;
}

.c10:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #444bc9 0px 0px 0px 2px;
}

.c10[disabled] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.c10 {
  border: 0;
  background: unset;
  color: #435a6f;
  fill: #435a6f;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c10:hover {
  color: #000;
  fill: #000;
}

.c2 {
  background-color: white;
  border-radius: 3px;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 0px 1px rgba(0,0,0,0.1);
}

.c12 {
  border: 0px;
  -webkit-clip: rect(0px,0px,0px,0px);
  clip: rect(0px,0px,0px,0px);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0px;
  overflow: hidden;
  position: absolute;
}

abbr.c8 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c8 {
  font-style: italic;
}

kbd.c8 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c8 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c8 {
  font-weight: bold;
}

sub.c8,
sup.c8 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c8,
u.c8 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c8,
cite.c8,
var.c8,
em.c8 {
  font-style: italic;
}

kbd.c8,
pre.c8,
samp.c8 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c8 .c13 {
  top: 0.15em;
}

.c1 {
  padding: 1.5rem;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 1em;
  position: relative;
  width: 100%;
}

.c7 {
  font-weight: 600;
  font-size: 1.25rem;
}

.c0 {
  position: relative;
}

.c9 {
  position: absolute;
  right: 1rem;
  top: 1rem;
  width: 1.5em;
  min-height: 1.5em;
  padding: 0;
  text-align: right;
}

.c9:hover {
  background-color: #f2f2f2;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

<div
  aria-describedby="Callout-1"
  aria-labelledby="Callout-2"
  class="c0 c1 c2 c3"
>
  <div
    class="c4 c3"
  >
    <div
      class="c3"
    >
      <div
        class="c5 c6 c3"
      >
        <span
          class="c7 c8 c3"
          id="Callout-2"
        >
          Title
        </span>
      </div>
      <div
        class="c3"
        id="Callout-1"
      >
        Callout
      </div>
    </div>
  </div>
  <button
    class="c9 c10 c11"
    kind="link"
    type="button"
  >
    <div
      class="c12 c3"
    >
      Close
    </div>
    <svg
      aria-hidden="true"
      class="c13 c14 c3"
      role="img"
      size="1"
      style="size: 1px;"
      viewBox="0 0 352 512"
    >
      <path
        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`renders correctly when a footer prop is set 1`] = `
.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  background-color: white;
  border-radius: 3px;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 0px 1px rgba(0,0,0,0.1);
}

.c1 {
  padding: 1.5rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 1rem;
  width: 100%;
}

.c0 {
  position: relative;
}

<div
  aria-describedby="Callout-1"
  aria-labelledby="Callout-2"
  class="c0 c1 c2 c3"
>
  <div
    class="c4 c3"
  >
    <div
      class="c3"
    >
      <div
        class="c3"
        id="Callout-1"
      >
        Callout
      </div>
      <div
        class="c5 c3"
      >
        <div>
          footer
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly when a hasTint prop is set 1`] = `
.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  background-color: white;
  border-radius: 3px;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 0px 1px rgba(0,0,0,0.1);
}

.c1 {
  padding: 1.5rem;
}

.c0 {
  position: relative;
}

<div
  aria-describedby="Callout-1"
  aria-labelledby="Callout-2"
  class="c0 c1 c2 c3"
>
  <div
    class="c4 c3"
  >
    <div
      class="c3"
    >
      <div
        class="c3"
        id="Callout-1"
      >
        Callout
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly when a title prop is set 1`] = `
.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  background-color: white;
  border-radius: 3px;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 0px 1px rgba(0,0,0,0.1);
}

abbr.c8 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c8 {
  font-style: italic;
}

kbd.c8 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c8 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c8 {
  font-weight: bold;
}

sub.c8,
sup.c8 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c8,
u.c8 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c8,
cite.c8,
var.c8,
em.c8 {
  font-style: italic;
}

kbd.c8,
pre.c8,
samp.c8 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c8 .c9 {
  top: 0.15em;
}

.c1 {
  padding: 1.5rem;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 1em;
  position: relative;
  width: 100%;
}

.c7 {
  font-weight: 600;
  font-size: 1.25rem;
}

.c0 {
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

<div
  aria-describedby="Callout-1"
  aria-labelledby="Callout-2"
  class="c0 c1 c2 c3"
>
  <div
    class="c4 c3"
  >
    <div
      class="c3"
    >
      <div
        class="c5 c6 c3"
      >
        <span
          class="c7 c8 c3"
          id="Callout-2"
        >
          Title
        </span>
      </div>
      <div
        class="c3"
        id="Callout-1"
      >
        Callout
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly when a type prop is set 1`] = `
.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c10 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: #35709e !important;
}

.c10:focus:not(:focus-visible) {
  outline: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 {
  fill: #35709e;
  position: relative;
  font-size: 1em;
  height: 1em;
  width: 1em;
}

.c2 {
  background-color: white;
  border-radius: 3px;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 0px 1px rgba(0,0,0,0.1);
}

abbr.c6 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c6 {
  font-style: italic;
}

kbd.c6 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c6 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c6 {
  font-weight: bold;
}

sub.c6,
sup.c6 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c6,
u.c6 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c6,
cite.c6,
var.c6,
em.c6 {
  font-style: italic;
}

kbd.c6,
pre.c6,
samp.c6 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c6 .c8 {
  top: 0.15em;
}

.c1 {
  padding: 1.5rem;
}

.c5 {
  font-weight: 600;
  font-size: 1.25rem;
}

.c0 {
  position: relative;
}

.c7 {
  margin-right: 1rem;
}

<div
  aria-describedby="Callout-1"
  aria-labelledby="Callout-2"
  class="c0 c1 c2 c3"
  type="info"
>
  <div
    class="c4 c3"
  >
    <span
      class="c5 c6 c3"
    >
      <svg
        class="c7 c8 c9 c10"
        color="info"
        role="img"
        size="1"
        style="size: 1px;"
        viewBox="0 0 512 512"
      >
        <path
          d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <div
      class="c3"
    >
      <div
        class="c3"
        id="Callout-1"
      >
        Callout
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly with a custom element 1`] = `
.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  background-color: white;
  border-radius: 3px;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 0px 1px rgba(0,0,0,0.1);
}

.c1 {
  padding: 1.5rem;
}

.c0 {
  position: relative;
}

<div
  aria-describedby="Callout-1"
  aria-labelledby="Callout-2"
  class="c0 c1 c2 c3"
>
  <div
    class="c4 c3"
  >
    <div
      class="c3"
    >
      <div
        class="c3"
        id="Callout-1"
      >
        <label>
          Callout
        </label>
      </div>
    </div>
  </div>
</div>
`;
